Modifications infos profil et suppression compte valides, déconnexion valide, ajout compte valide

--- a/style.css
+++ b/style.css
@@ -62,3 +62,14 @@ input[type="submit"]:hover {
     color: green;
     margin-bottom: 20px;
 }
+
+button.delete{
+    color:red;
+}
+
+.disconnect{
+    color:red;
+    text-align: right;
+    font-weight:bold;
+    font-family: Arial, sans-serif;
+}
